<resources>
    <string name="app_name">과거의 오늘</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--Android Manifest-->
    <string name="dic_365_mani">365 사전</string>
    <string name="dic_per_mani">인물 사전</string>
    <string name="select_per_mani">인물 선택</string>

    <!--string names for activity_person_select-->
    <string name="today_intro">당신은 오늘 누구였나요?</string>
    <string name="today_person1_chk">인물1</string>
    <string name="today_person2_chk">인물2</string>
    <string name="today_person3_chk">인물3</string>
    <string name="today_person4_chk">인물4</string>
    <string name="today_person5_chk">인물5</string>
    <string name="today_person1_Tview">__________</string>
    <string name="today_person2_Tview">__________</string>
    <string name="today_person3_Tview">__________</string>
    <string name="today_person4_Tview">__________</string>
    <string name="today_person5_Tview">__________</string>
    <string name="today_person_btn">\?</string>
    <string name="today_done">선택 완료</string>
    <string name="person_intro_popup">인물에 대한 좀 더 자세한 설명 중(…)</string>


    <!-- 메인화면 string-->
    <string name="main_date">0000년 00월 00일 0요일</string>
    <string name="history">-----------</string>
    <string name="who">당신은 오늘 누구였나요?</string>
    <string name="go_write_to">일기 작성하러 가기</string>

    <!--dictionary_365-->
    <string name="dict_intro">과거의 오늘은…</string>
    <string name="search_365">검색</string>

    <!--dictionary_person-->
    <string name="dic_person_hint">이름, 시대, 유형</string>

    <!--activity_write_diary-->
    <string name="date_diary">XXXX. XX. XX</string>
    <string name="person_name">김찰리</string>
    <string name="person_tag">#TAG1 #TAG2 #TAG3</string>
    <string name="write_box_hjnt">일기를 써보세요!</string>

    <!--activity_view_diary-->
    <string name="diary_imp">(저장 받아온 다이어리 내용 텍스트 파일..)</string>

    <!--navigator (styles)-->
    <string name="log_in_out">로그인/로그아웃</string>
    <string name="settings">설정</string>
    <string name="menu_write">일기작성</string>
    <string name="menu_calendar">캘린더</string>
    <string name="menu_per_dic">인물 사전</string>
    <string name="menu_day_dic">365사전</string>
    <string name="menu_search">단어 검색</string>

    <!--Settings-->
    <string name="sync">동기화</string>
    <string name="delete_account">탈퇴</string>
    <string name="copyrights">COPY RIGHTⓒ</string>
    <string name="developer_note">개발자 노트</string>
    <string name="language">언어 설정</string>

    <!--popup string-->
    <string name="close_popup">확인</string>
    <string name="goto_link">상세 주소 링크</string>

    <!--tmp google-->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="title_text">로그인을 해주세요</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //절취선 --------------------------------------------------------------------
    <string name="_app_name">today of Past</string>
    <string name="_navigation_drawer_open">Open navigation drawer</string>
    <string name="_navigation_drawer_close">Close navigation drawer</string>
    <string name="_nav_header_title">Android Studio</string>
    <string name="_nav_header_subtitle">android.studio@android.com</string>
    <string name="_nav_header_desc">Navigation header</string>
    <string name="_action_settings">Settings</string>

    <string name="_menu_home">Home</string>
    <string name="_menu_gallery">Gallery</string>
    <string name="_menu_slideshow">Slideshow</string>
    <string name="_menu_tools">Tools</string>
    <string name="_menu_share">Share</string>
    <string name="_menu_send">Send</string>

    <!--Android Manifest-->
    <string name="_dic_365_mani">365 dictionary</string>
    <string name="_dic_per_mani">Person dictionary</string>
    <string name="_select_per_mani">Select Person</string>

    <!--string names for activity_person_select-->
    <string name="_today_intro">Who were you today</string>
    <string name="_today_person1_chk">person1</string>
    <string name="_today_person2_chk">person2</string>
    <string name="_today_person3_chk">person3</string>
    <string name="_today_person4_chk">person4</string>
    <string name="_today_person5_chk">person5</string>
    <string name="_today_person1_Tview">__________</string>
    <string name="_today_person2_Tview">__________</string>
    <string name="_today_person3_Tview">__________</string>
    <string name="_today_person4_Tview">__________</string>
    <string name="_today_person5_Tview">__________</string>
    <string name="_today_person_btn">\?</string>
    <string name="_today_done">Selected</string>
    <string name="_person_intro_popup">In more detail about the person(…)</string>


    <!-- 메인화면 string-->
    <string name="_main_date">0000year 00month 00day 0</string>
    <string name="_history">-----------</string>
    <string name="_who">Who were you today?</string>
    <string name="_go_write_to">Go to write Diary</string>

    <!--dictionary_365-->
    <string name="_dict_intro">Today of Past is…</string>
    <string name="_search_365">Search</string>

    <!--dictionary_person-->
    <string name="_dic_person_hint">Name, Era, Type</string>

    <!--activity_write_diary-->
    <string name="_date_diary">XXXX. XX. XX</string>
    <string name="_person_name">Charlie Kim</string>
    <string name="_person_tag">#TAG1 #TAG2 #TAG3</string>
    <string name="_write_box_hjnt">Write the Diary!</string>

    <!--activity_view_diary-->
    <string name="_diary_imp">(저장 받아온 다이어리 내용 텍스트 파일..)</string>

    <!--navigator (styles)-->
    <string name="_log_in_out">Log In / Log Out</string>
    <string name="_settings">Settings</string>
    <string name="_menu_write">Write Diary</string>
    <string name="_menu_calendar">Calendar</string>
    <string name="_menu_per_dic">Person Dictionary</string>
    <string name="_menu_day_dic">365 Dictionary</string>
    <string name="_menu_search">Word Search</string>

    <!--Settings-->
    <string name="_sync">Synchronization</string>
    <string name="_delete_account">Sign Out</string>
    <string name="_copyrights">COPY RIGHTⓒ</string>
    <string name="_developer_note">Developer\'s note</string>
    <string name="_language">Language Setting</string>

    <!--popup string-->
    <string name="_close_popup">OK</string>
    <string name="_goto_link">Link for Detail Address</string>

    <!--tmp google-->
    <!-- Sign-in status messages -->
    <string name="_signed_in_fmt">Signed in as: %s</string>
    <string name="_signed_in">Signed in</string>
    <string name="_signing_in">Signing in…</string>
    <string name="_signed_out">Signed out</string>
    <string name="_signed_in_err">"Error: please check logs."</string>
    <string name="_error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="_loading">Loading…</string>
    <string name="_auth_code_fmt">Auth Code: %s</string>
    <string name="_id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="_play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="_sign_out">Sign Out</string>
    <string name="_disconnect">Disconnect</string>
    <string name="_refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="_desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="_contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="_name_sign_in_activity">SignInActivity</string>
    <string name="_desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="_desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="_name_id_token_activity">IdTokenActivity</string>
    <string name="_desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="_desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="_name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="_desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="_name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="_connections_fmt">Connections: %1$s</string>
    <string name="_msg_contacts_failed">Get contacts failed.</string>
    <string name="_title_text">Login Please</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="_hello_blank_fragment">Hello blank fragment</string>
</resources>