<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/today_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="I was _____ today."
            />

    </LinearLayout>
    <!-- 여기 너무 글자 분량 많아서 수정 필요함. 데이터 불러오는 등은 처리 함-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            >

            <CheckBox
                android:id="@+id/today_person1"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"

                android:checked="false"
                android:text="@string/_today_person1_chk" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/today_person1_Tview"
                android:text="@string/_today_person1_Tview"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"

                android:id="@+id/today_person1_btn"
                android:text="@string/_today_person_btn" />
        </LinearLayout>
        <LinearLayout
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            >

            <CheckBox
                android:id="@+id/today_person2"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:layout_margin="5dp"
                android:text="@string/_today_person2_chk" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/today_person2_Tview"
                android:text="@string/_today_person2_Tview"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:id="@+id/today_person2_btn"
                android:text="@string/_today_person_btn" />
        </LinearLayout>
        <LinearLayout
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            >

            <CheckBox
                android:id="@+id/today_person3"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:layout_margin="5dp"
                android:text="@string/_today_person3_chk" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/today_person3_Tview"
                android:text="@string/_today_person3_Tview"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:id="@+id/today_person3_btn"
                android:text="@string/_today_person_btn" />
        </LinearLayout>
        <LinearLayout
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            >

            <CheckBox
                android:id="@+id/today_person4"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:layout_margin="5dp"
                android:text="@string/_today_person4_chk" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/today_person4_Tview"
                android:text="@string/_today_person4_Tview"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:id="@+id/today_person4_btn"
                android:text="@string/_today_person_btn" />
        </LinearLayout>
        <LinearLayout
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >
            <CheckBox
                android:id="@+id/today_person5"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:layout_margin="5dp"
                android:text="@string/_today_person5_chk" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/today_person5_Tview"
                android:text="@string/_today_person5_Tview"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:id="@+id/today_person5_btn"
                android:text="@string/_today_person_btn" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/today_done"
            android:text="@string/_today_done"

            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>